Finished with validation and functionality of travel router
